feat(infrastructur): :card_file_box: alembic migrator added

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+exclude: .*migrations\/.*
 repos:
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.12.11  # Use the latest stable version
