--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "fastapi[standard] (>=0.116.1,<0.117.0)"
+    "fastapi[standard] (>=0.116.1,<0.117.0)",
+    "python-dotenv (>=1.1.1,<2.0.0)",
+    "pre-commit (>=4.3.0,<5.0.0)",
+    "alembic (>=1.16.5,<2.0.0)",
 ]
 
 
