--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "python-dotenv (>=1.1.1,<2.0.0)",
     "pre-commit (>=4.3.0,<5.0.0)",
     "alembic (>=1.16.5,<2.0.0)",
+    "sqlalchemy (>=2.0.43,<3.0.0)",
 ]
 
 
